[workspace]
members = [
    "aesm-client",
    "async-queue",
    "dcap-provider",
    "dcap-ql-sys",
    "dcap-ql",
    "dcap-retrieve-pckid",
    "enclave-runner",
    "fortanix-sgx-abi",
    "fortanix-sgx-tools",
    "report-test",
    "rs-libc",
    "sgxs",
    "sgx-isa",
    "sgxs-loaders",
    "sgxs-tools"
]
exclude = ["examples"]
